fix page overflow y scroll

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@
   z-index: 1;
   animation: fadeIn .8s ease-in-out;
   height: 100%;
+  overflow-y: scroll;
 }
 
 .page-background {
